# three-d-asset

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: rust.yml
gltf/: Cargo.toml
gltf/gltf-json/src/: scene.rs
gltf/src/: camera.rs  lib.rs  material.rs
src/: animation.rs  camera.rs  geometry.rs  io.rs  lib.rs  loader.rs  material.rs  math.rs  model.rs  models.rs  parser.rs  prelude.rs  saver.rs  surface.rs  texture.rs  volume.rs
src/geometry/: point_cloud.rs  points.rs  tri_mesh.rs
src/io/: 3mf.rs  fbx.rs  gltf.rs  img.rs  loaded.rs  loader.rs  obj.rs  parser.rs  pcd.rs  ply.rs  raw_assets.rs  saver.rs  stl.rs  vol.rs
src/io/parser/: gltf.rs  img.rs  obj.rs  vol.rs
src/parser/: gltf.rs  img.rs  obj.rs  vol.rs
src/prelude/: aabb.rs  color.rs  math.rs
src/texture/: texture2d.rs  texture3d.rs  texture_cube.rs
test_data/: AnimatedTriangle.gltf  binary.pcd  cube.stl  data_url.gltf  grape_small.ply  hand.pcd  positions_colors.ply  positions_only.ply  suzanne.stl  test.tga  test.tif
