[package]
name = "three-d-asset"
version = "0.10.0"
authors = ["Asger Nyman Christiansen <asgernyman@gmail.com>"]
edition = "2021"
description = "Load/save functionality for 3d applications."
license = "MIT"
readme = "README.md"
repository = "https://github.com/asny/three-d-asset"
categories = ["parsing", "encoding", "game-development", "graphics", "rendering"]
keywords = ["3d", "gamedev", "asset", "loading"]
exclude = ["/test_data", ".gitignore"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
http = ["reqwest/default-tls"]
http-rustls = ["reqwest/rustls-tls"]
data-url = ["dep:data-url"]

png = ["image/png"]
jpeg = ["image/jpeg"]
hdr = ["image/hdr"]
tiff = ["image/tiff"]
tga = ["image/tga"]
gif = ["image/gif"]
bmp = ["image/bmp"]

svg = ["dep:resvg"]

obj = ["wavefront_obj"]
gltf = ["dep:gltf"]
stl = ["dep:stl_io"]

pcd = ["pcd-rs"]

vol = []

serde = ["dep:serde", "half/serde", "cgmath/serde"]

[dependencies]
cgmath = "0.18"
half = {version="2", features=["std", "num-traits", "zerocopy"]}
thiserror = "2"
reqwest = {version = "0.12", optional = true, default-features = false }
gltf = { version = "1", optional = true, features=["KHR_materials_ior", "KHR_materials_transmission"] }
wavefront_obj = { version = "10", optional = true }
stl_io = { version = "0.8", optional = true }
image = { version = "0.25", optional = true, default-features = false}
resvg = { version = "0.44", optional = true }
pcd-rs = { version = "0.12", optional = true, features = ["derive"] }
data-url = {version = "0.3", optional = true }
serde = {version= "1", optional = true, features = ["derive", "rc"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["fs", "io-util", "rt-multi-thread", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ['Document', 'Window'] }
